<resources>
    <string name="app_name">Vastu</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="we_will_send_otp">We will send you OneTime Password \n(OTP)</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="enter_otp_text">Enter OTP sent to </string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="first_name_text">First Name</string>
    <string name="middle_name_text">Middle Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="address_name_text">Address Name</string>
    <string name="email_id_text">Email Id</string>
    <string name="city_text">City</string>
    <string name="address_text">Address</string>
    <string name="sub_area_text">Sub Area</string>
    <string name="send_otp_text">Send OTP</string>
    <string name="submit_btn_text">Submit</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="timer_text">00.%1$s sec</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="otp_not_received">Didn\'t receive OTP?</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="sent_otp_text">We have sent OTP on your number.</string>
    <string name="contact_us">Contact Us</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="mukul_joshi">Mukul Joshi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loan">Loan</string>
    <string name="real_estate">Real Estate</string>
    <string name="vastu">Vastu</string>
    <string name="enquiry">Enquiry</string>
    <string name="add_property">Add Property</string>
    <string name="personal_loan">PERSONAL LOAN</string>
    <string name="home_loan">HOME LOAN</string>
    <string name="car_loan">CAR LOAN</string>
    <string name="search"><b>Search by Project</b></string>
    <string name="budget">Budget</string>
    <string name="featured">FEATURED</string>
    <string name="details">Property Details</string>
    <string name="type">Type</string>
    <string name="loan_type">Loan Type</string>
    <string name="req_loan">Loan Amount</string>
    <string name="apartments">Row house</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="_1">1</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="furnishing">Furnishing</string>
    <string name="unfurnished">Unfurnished</string>
    <string name="construction_status">Construction Status</string>
    <string name="construction">Construction \nstatus</string>
    <string name="status">Status</string>
    <string name="ready_to_move">Ready to Move</string>
    <string name="listed_by">Listed By</string>
    <string name="_700">700</string>
    <string name="super_builtup_area_ft">Super Builtup Area (Sq.ft )</string>
    <string name="super_builtup">Super Builtup Area (Sq.ft )</string>
    <string name="area_ft">Sq.ft</string>
    <string name="chat">CHAT</string>
    <string name="make_offer">MAKE OFFER</string>
    <string name="title">Title</string>
    <string name="sell_type">Sell Type</string>
    <string name="kitchen">Kitchen</string>
    <string name="garage">Garage</string>
    <string name="balcony">Balcony</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="floors">Floors</string>
    <string name="price">Price</string>
    <string name="booking_amount">Booking Amount</string>
    <string name="state">State</string>
    <string name="brochure">Brochure</string>
    <string name="description">Description</string>
    <string name="_5">5</string>
    <string name="please_wait">Please wait...</string>
    <string name="okay">Okay</string>
    <string name="availability">Availability</string>
    <string name="build_year">Build Year</string>
    <string name="rera_no">RERA No</string>
    <string name="brief_details">Brief Details</string>
    <string name="highlights">Highlights</string>
    <string name="slug">Slug</string>
    <string name="occupation_text">Occupation</string>
    <string name="property_interested_in_text">Property Interested In</string>
    <string name="ownership_text">Ownership</string>
    <string name="area_text">Area(Sq.Ft.)</string>
    <string name="budget_text">Budget</string>
    <string name="loan_interested_in_text">Loan Interested In</string>
    <string name="preferred_bank_text">Preferred Bank</string>
    <string name="loan_amount_text">Loan Amount</string>
    <string name="loan_term_year_text">Loan Term Year</string>
    <string name="banks_text">Banks</string>
    <string name="loan_text">Loan</string>
    <string name="property_text">Property</string>
    <string name="loan_enquiry">Loan Enquiry</string>
    <string name="property_enquiry">Property Enquiry</string>
    <string name="required">Required*</string>
    <string name="no_connection">No Connection</string>
    <string name="first_name_error">Please enter first name</string>
    <string name="middle_name_error">Please enter middle name</string>
    <string name="last_name_error">Please enter last name</string>
    <string name="mobile_number_error">Please enter mobile number</string>
    <string name="address_error">Please enter address</string>
    <string name="occupation_error">Please select occupation</string>
    <string name="loan_interested_in_error">Please select loan</string>
    <string name="bank_error">Please select bank</string>
    <string name="amount_error">Please enter loan amount</string>
    <string name="loan_term_year_error">Please enter loan term year</string>
    <string name="property_interested_in_error">Please select property</string>
    <string name="ownership_error">Please select ownership</string>
    <string name="area_error">Please enter valid area</string>
    <string name="budget_error">Please enter valid budget</string>
    <string name="full_name">Full Name</string>
    <string name="preferred_bank">Preferred Bank</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure, you want to logout?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="rupee">\u20B9</string>
    <string name="offers">Offers</string>
    <string name="st_ft">Sq.feet</string>
    <string name="fill_up_the_property_details">Fill up the property details</string>
    <string name="edit_up_the_property_details">Edit the property details</string>
    <string name="property_title">Property Title</string>
    <string name="property_type">Property Type</string>
    <string name="property_address">Property Address</string>
    <string name="property_thumbnail_1080_800">Property Thumbnail(1080 * 800)</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="brochure_pdf">Brochure(PDF)</string>
    <string name="select_image">Select Image</string>
    <string name="images">Images*</string>
    <string name="upload">Upload</string>
    <string name="property_title_error">Please enter property title</string>
    <string name="state_error">Please enter state</string>
    <string name="post_property">Post Property</string>
    <string name="description_error">Please enter description</string>
    <string name="highlights_error">Please enter highlights</string>
    <string name="property_amount_error">Please enter property amount</string>
    <string name="property_price_error">Please enter property price</string>
    <string name="image_string">image</string>
    <string name="video_string">video</string>
    <string name="audio_string">audio</string>
    <string name="id_string">_id=?</string>
    <string name="content_string">content</string>
    <string name="file_string">file</string>
    <string name="data_string">_data</string>
    <string name="slash">/</string>
    <string name="property_id">Property ID</string>
    <string name="properties">Properties</string>
    <string name="assign">Assign</string>
    <string name="reassign">Re-Assign</string>
    <string name="employees">Employees</string>
    <string name="employee_name">Employee Name</string>
    <string name="assign_lead_text">Assign Lead</string>
    <string name="update_status">Update Status</string>
    <string name="profile">My Profile</string>
    <string name="filters_and_sort">FILTERS &amp; SORT</string>
    <string name="choose_city">Choose city from below options</string>
    <string name="choose_area">Choose area from below options</string>
    <string name="choose_a_range_below">Choose a range below</string>
    <string name="choose_from_below_options">Choose from below options</string>
    <string name="choose_a_range_below_per_Sq">Choose a range below (Rs/Sq Ft)</string>
    <string name="choose_a_range_below_Sq">Choose a range below (Sq Ft)</string>
    <string name="select_from_below_options">Select from the options below</string>
    <string name="budget_lower_limit">0</string>
    <string name="budget_upper_limit">10000000</string>
    <string name="SqFt_upper_limit">500000</string>
    <string name="buildup_area_upper_limit">10000</string>
    <string name="houses_and_Villas">Flat</string>
    <string name="builder_floors">Office</string>
    <string name="farmhouses">Bungalows</string>
    <string name="onebedroom">1 bedroom</string>
    <string name="twobedrooms">2 bedrooms</string>
    <string name="threebedrooms">3 bedrooms</string>
    <string name="fourbedrooms">4 bedrooms</string>
    <string name="onebathroom">1 bathroom</string>
    <string name="twobathrooms">2 bathrooms</string>
    <string name="furnished">Furnished</string>
    <string name="semi_furnished">Semi-Furnished</string>
    <string name="under_const">Under Construction</string>
    <string name="new_launch">New Launch</string>
    <string name="owner">Owner</string>
    <string name="dealer">Dealer</string>
    <string name="builder">Builder</string>
    <string name="date_published">Date Published</string>
    <string name="relevance">Relevance</string>
    <string name="price_low_to_high">Price:Low to High</string>
    <string name="price_high_to_low">Price:High to Low</string>
    <string name="distance">Distance</string>
    <string name="chip_text_budget">Budget:</string>
    <string name="chip_text_price_per_sq">Price Per Sq.Ft:</string>
    <string name="chip_text_builtup_area">Super Builtup area(ft):</string>
    <string name="by_taluka">By Taluka</string>
    <string name="district">Ahmednagar</string>
    <string name="by_area">By Area</string>
    <string name="by_budget">By Budget</string>
    <string name="by_property_type">By Property Type</string>
    <string name="by_price_per_sq_ft">By Price Per sq.Ft.</string>
    <string name="by_bedrooms">By Bedrooms</string>
    <string name="by_bathrooms">By Bathrooms</string>
    <string name="by_furnishing">By Furnishing</string>
    <string name="by_constr_status">By Construction status</string>
    <string name="by_listed_by">By Listed By</string>
    <string name="home_text"><b>Home</b></string>
    <string name="prime_properties_text"><b>Prime Properties</b></string>
    <string name="upcoming_schemes_text"><b>Upcoming Schemes</b></string>
    <string name="our_services_text"><b>Our Services</b></string>
    <string name="wishlist_text"><b>Wishlist</b></string>
    <string name="please_describe_feedback">Please describe your feedback here...</string>
    <string name="we_need_to_understand_your_profile">We Need To Understand Your Profile you find</string>
    <string name="advertisement_plans">Advertisement Plans Are Only For Companies, Firm Or Person Who Deal In Real Estate Industry</string>
    <string name="view_plans">View Plans</string>
</resources>