<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.vastu.realestate.appModule.ourServies.planForAdvertisement.PlanForAdvertisementBindingAdapter"/>
        <variable
            name="drawerViewModel"
            type="com.vastu.realestate.appModule.dashboard.viewmodel.DrawerViewModel" />
        <variable
            name="planForAdvertisementViewModel"
            type="com.vastu.realestate.appModule.ourServies.planForAdvertisement.PlanForAdvertisementViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_layout"
            bind:drawerViewModel="@{drawerViewModel}" />

        <TextView
            android:id="@+id/txt_need_to_understand_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            android:text="@string/we_need_to_understand_your_profile"
            android:fontFamily="@font/open_sans_bold"
            android:textStyle="bold"
            android:textSize="@dimen/text_size18sp"
            android:layout_margin="@dimen/dimen20dp"
            />
        <TextView
            android:id="@+id/txt_advertisement_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_need_to_understand_profile"
            app:layout_constraintStart_toStartOf="@+id/txt_need_to_understand_profile"
            app:layout_constraintEnd_toEndOf="@+id/txt_need_to_understand_profile"
            android:text="@string/advertisement_plans"
            android:layout_marginTop="@dimen/dimen10dp"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="@dimen/dimen15sp"
            android:layout_marginStart="@dimen/dimen20dp"
            />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            allItems="@{planForAdvertisementViewModel.allQuery}"
            selectedItem="@{planForAdvertisementViewModel.selectedQuery}"
            android:layout_margin="@dimen/dimen20dp"
            android:text="@string/select_from_below_options"
            android:textSize="@dimen/dimen_16sp"
            android:spinnerMode="dropdown"
            android:background="@drawable/edt_background"
            android:drawableEnd="@drawable/drop_down_icon"
            app:layout_constraintTop_toBottomOf="@+id/txt_advertisement_plan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/edt_review"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen150dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/dimen20dp"
            android:padding="@dimen/dimen15dp"
            android:background="@drawable/edt_background"
            android:maxLines="5"
            android:gravity="top"
            android:textSize="@dimen/dimen_16sp"
            android:textColorHint="@color/gray_hint"
            android:hint="@string/please_describe_feedback"/>

        <Button
            android:id="@+id/viewPlansBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/view_plans"
            android:onClick="@{(view)->planForAdvertisementViewModel.submitClick()}"
            android:textColor="@color/white"
            android:layout_margin="@dimen/dimen20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintTop_toBottomOf="@+id/edt_review" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>