<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_size_small"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvYes"
                style="@style/whiteColorButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:padding="@dimen/padding_medium"
                android:textSize="@dimen/text_size_small"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.003"
                android:layout_height="@dimen/dimen50dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/tvNo"
                style="@style/whiteColorButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:padding="@dimen/padding_medium"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="@dimen/text_size_small"/>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>